syntax = "proto3";

package proto;

option go_package = ".;pb";


service BlogService {
  rpc CreatePost (Post) returns (PostResponse);
  rpc ReadPost (PostID) returns (PostResponse);
  rpc UpdatePost (Post) returns (PostResponse);
  rpc DeletePost (PostID) returns (DeleteResponse);
}

message Post {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  string publication_date = 5;
  repeated string tags = 6;
}

message PostID {
  string id = 1;
}


message PostResponse {
  enum Status {
    UNKNOWN = 0;
    SUCCESS = 1;
    ERROR = 2;
  }
  Status status = 1;
  Post post = 2;
  string error = 3;
}

message DeleteResponse {
  enum Status {
    UNKNOWN = 0;
    SUCCESS = 1;
    ERROR = 2;
  }
  Status status = 1;
  string error = 2;
}
